Update .gitignore to exclude large model files and training artifacts
- Add checkpoints/ directory to prevent large model files from being committed
- Add logs/ directory to exclude training logs
- Add common model file extensions (*.pt, *.pth, *.bin) to prevent accidental commits
- This prevents GitHub's 100MB file size limit issues

--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,12 @@ prompt.md
 
 # results
 metrics/
+
+# Model checkpoints and training logs (large files)
+checkpoints/
+logs/
+
+# Large model files
+*.pt
+*.pth
+*.bin
