Add training checkpoints and logs
- Add model checkpoints (handled by Git LFS): best_checkpoint.pt, final_model.pt, latest_checkpoint.pt
- Add training logs and tensorboard events for training history tracking
- Temporarily enable checkpoints/ and logs/ in .gitignore for this commit
- Large .pt files are automatically handled by Git LFS configuration

--- a/.gitignore
+++ b/.gitignore
@@ -19,8 +19,8 @@ prompt.md
 metrics/
 
 # Model checkpoints and training logs (large files)
-checkpoints/
-logs/
+# checkpoints/
+# logs/
 
 # Large model files (*.pt handled by Git LFS)
 *.pth
